# cpp_meetup_presentation_code

./: CMakeLists.txt  main.cpp
jpeg_custom_coder/: CMakeLists.txt  buffer.c  buffer.h  dct.c  dct.h  jpeg.c  jpeg.h  jpeg_tables.h  jpeg_util.h  main.c  ppmm.c  ppmm.h  timer.c  timer.h
